--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-use-wizard": "^2.3.0",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.9"
+    "zod": "^4.1.9",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
