--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
+    "react-device-frameset": "^1.3.4",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-use-wizard": "^2.3.0",
